@@ -43,6 +43,7 @@
 * Don't build sntp/libevent/sample/.  Harlan Stenn.
 * tests/libntp/test_caltontp needs -lpthread.  Harlan Stenn.
 * br-flock: --enable-local-libevent.  Harlan Stenn.
+* scripts/lib/NTP/Util.pm: stratum output is version-dependent.  Harlan Stenn.
 ---
 (4.2.8p3) 2015/06/29 Released by Harlan Stenn <stenn@ntp.org>
 
